Fixed error with multiline input and text wrapping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -282,3 +282,22 @@
   align-items: center;
   flex-direction: column;
 }
+
+.prestyle {
+  font-size: 1.5rem;
+  height: 100%;
+}
+
+.editor {
+  font-size: 1.5rem;
+  border-radius: 5px;
+  word-break: break-all;
+  background-color: rgba(34, 34, 34, 0.85);
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.editor > textarea,
+.editor > pre {
+  outline: none;
+}
